--- a/front/src/assets/main.css
+++ b/front/src/assets/main.css
@@ -1,5 +1,12 @@
 @import './base.css';
 
+html, body {
+  width: 100%;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
 #app {
   max-width: 100%;
   width: 100%;
@@ -18,7 +25,7 @@ a,
 
 @media (hover: hover) {
   a:hover {
-    background-color: hsla(160, 100%, 37%, 0.2);
+    background-color: hsla(158, 44%, 89%, 0.2);
   }
 }
 
@@ -28,12 +35,11 @@ a,
     flex-direction: column;
     align-items: stretch;
     display: flex;
-    place-items: center;
   }
 
   #app {
     display: grid;
-    grid-template-columns: 1fr 1fr;
+    grid-template-columns: 1fr;
     padding: 0 2rem;
     width: 100%;
     max-width: 100%;
